--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           dotnet-version: '6.0.x'
       - name: Build
-        run: dotnet build -c Release
+        run: dotnet build -c Release -warnaserror
       - name: Test
         run: dotnet test -c Release --no-build
