Reference SQL Server generator project in CLI project

--- a/src/Puro.SqlServer.CLI/Puro.SqlServer.CLI.csproj
+++ b/src/Puro.SqlServer.CLI/Puro.SqlServer.CLI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Puro.SqlServer.Generator\Puro.SqlServer.Generator.csproj" />
+  </ItemGroup>
+
 </Project>
