Add test project for SQL Server CLI project

--- a/src/Puro.SqlServer.CLI/Puro.SqlServer.CLI.csproj
+++ b/src/Puro.SqlServer.CLI/Puro.SqlServer.CLI.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Puro.SqlServer.Generator\Puro.SqlServer.Generator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Puro.SqlServer.CLI.Tests" />
+  </ItemGroup>
+
 </Project>
