Add support for testing SQL Server migration runner

--- a/src/Puro.SqlServer.Runner/Puro.SqlServer.Runner.csproj
+++ b/src/Puro.SqlServer.Runner/Puro.SqlServer.Runner.csproj
@@ -15,4 +15,8 @@
     <InternalsVisibleTo Include="Puro.SqlServer.Runner.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
+  </ItemGroup>
+
 </Project>
