Group xunit NuGet packages in dependabot PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
       interval: "weekly"
     reviewers:
       - "crnd"
+    groups:
+      xunit:
+        patterns:
+          - "xunit*"
 
   # GitHub Actions
   - package-ecosystem: "github-actions"
