Add initial version of MSSQL container tests

--- a/src/Puro.SqlServer.Runner/Puro.SqlServer.Runner.csproj
+++ b/src/Puro.SqlServer.Runner/Puro.SqlServer.Runner.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Puro.SqlServer.Runner.Tests" />
+    <InternalsVisibleTo Include="Puro.SqlServer.Runner.IntegrationTests"/>
   </ItemGroup>
 
   <ItemGroup>
